--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "any-date-parser": "^1.5.4",
+    "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
+    "d3-hexbin": "^0.2.2",
+    "d3-timelines": "^1.3.1",
+    "d3v4": "^4.2.2",
+    "gantt-task-react": "^0.3.9",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1",
     "react-scripts": "5.0.1",
+    "topojson": "^3.0.2",
+    "topojson-client": "^3.1.0",
+    "vis": "^4.21.0-EOL",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
